# FLUX-lang

./: .gitignore  README.en.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh.md  ftl-examples.md  ftl-spec.md  mcp-integration.md
.github/workflows/: ci.yml  release.yml
docs/: ANALYSIS.md  FLUX-v2-SPEC.md  FLUX-v3-SPEC.md  SIMULATION-hello-world.md  SIMULATION-snake-game.md
examples/: hello-world.flux.json  snake-game.flux.json
flux-ftl/: Cargo.toml  LICENSE  mcp-integration.md
flux-ftl/benches/: pipeline_bench.rs
flux-ftl/src/: ast.rs  codegen.rs  compiler.rs  error.rs  evolution.rs  feedback.rs  grammar.pest  lib.rs  llm.rs  main.rs  optimizer.rs  parser.rs  pipeline.rs  prover.rs  region_checker.rs  type_checker.rs  validator.rs
flux-ftl/testdata/: concurrency.ftl  ffi.ftl  hello_world.ftl  minimal.ftl  module_a.ftl  module_circular_a.ftl  module_circular_b.ftl  module_duplicate.ftl  module_main.ftl  module_missing_import.ftl  snake_game.ftl
flux-ftl/testdata/errors/: region_cycle.ftl  region_escape.ftl  region_no_parent.ftl
flux-ftl/tests/: cli_tests.rs  codegen_tests.rs  compiler_tests.rs  e2e_tests.rs  evolution_tests.rs  feedback_tests.rs  integration.rs  llm_tests.rs  mcp_tests.rs  optimizer_tests.rs  package_tests.rs  prover_tests.rs  validator_tests.rs
scripts/: release.sh
