[package]
name = "flux-ftl"
version = "1.0.0"
edition = "2024"
description = "FTL (FLUX Text Language) Parser — Text to AST for the FLUX computation substrate"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
z3 = "0.12"
blake3 = "1"
inkwell = { version = "0.4", features = ["llvm14-0"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "flux-ftl"
path = "src/main.rs"

[[bin]]
name = "flux-mcp"
path = "src/bin/flux-mcp.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"

[[bench]]
name = "pipeline_bench"
harness = false
